--- a/config.json
+++ b/config.json
@@ -35,7 +35,7 @@
         "Better not tell you now.",
         "Cannot predict now.",
         "Concentrate and ask again.",
-        "Dont count on it.",
+        "Don't count on it.",
         "It is certain.",
         "It is decidedly so.",
         "Most likely.",
